# centotype

./: .centotype-ci.toml  .mcp.json  .mcp.json.bak.1758902676  AGENTS.md  CHANGELOG.md  CI_CD_IMPLEMENTATION.md  CLAUDE.md  Cargo.toml  LICENSE.md  PORTFOLIO_SHORT.md  PORTFOLIO_SUMMARY.md  README.md  README_ARCHITECTURE.md  ROADMAP.md  content_metadata_spec.rs  deny.toml  diff_patch.txt  difficulty_algorithm.rs  promptforwork.md  tier_1_complete.json  tier_3_complete.json  tier_4_sample.json
.claude/: settings.local.json
.github/: performance_targets.json
.github/workflows/: ci.yml  performance_validation.yml  quality-gates.yml
.mcp-memory/: memory.json
analytics/: Cargo.toml
analytics/src/: analysis.rs  export.rs  lib.rs  metrics.rs  trends.rs
benches/: content_performance_benchmark.rs  input_latency_benchmark.rs  memory_concurrency_benchmark.rs  render_performance_benchmark.rs
benchmarks/examples/: cross_crate_benchmarks.rs  inter_crate_metrics.rs  performance_validation.rs
centotype-bin/: Cargo.toml
centotype-bin/src/: main.rs
centotype-bin/tests/: e2e_tests.rs
cli/: Cargo.toml
cli/src/: commands.rs  interface.rs  lib.rs  menus.rs  navigation.rs
content/: Cargo.toml
content/data/: content_corpus.json  tier_2_complete.json
content/examples/: adaptive_preloading.rs  content_loading_strategy.rs  content_metadata_spec.rs  difficulty_algorithm.rs
content/src/: cache.rs  corpus.rs  difficulty.rs  fs_security.rs  generator.rs  lib.rs  validation.rs
content/tests/: extended_fuzz.rs  golden_tests.rs  security_tests.rs
core/: Cargo.toml
core/src/: error.rs  events.rs  level.rs  lib.rs  scoring.rs  session.rs  traits.rs  types.rs
docs/: DEVELOPMENT.md  README.md
docs/agents/: architect-review.md  backend-architect.md  code-reviewer.md  debugger.md  devops-troubleshooter.md  docs-architect.md  dx-optimizer.md  frontend-developer.md  javascript-pro.md  performance-engineer.md  prompt-engineer.md  rust-pro.md  security-auditor.md  test-automator.md  tutorial-engineer.md  ui-ux-designer.md
docs/api/: API_REFERENCE.md
docs/architecture/: ADR-001-data-flow.md  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  TUI_IMPLEMENTATION_SUMMARY.md
docs/contribution/: CODE-REVIEW.md  INTEGRATION_COMPONENT_REVIEW.md
docs/design/: CI_CD.md  CONTENT_SYSTEM.md  ERROR_HANDLING.md  MASTER_PROMPT.md
docs/development/: CODE_QUALITY_VALIDATION_REPORT.md  CODE_REVIEW_PLAYBOOK_V1.md  DEVELOPMENT.md  DOCUMENTATION_UPDATE_SUMMARY.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  MCP-KnowledgeGraphMemory-policy.md
docs/guides/: DEVELOPER_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md  quick_start.md
docs/performance/: CONTENT_PERFORMANCE_ANALYSIS.md  PERFORMANCE_GUIDE.md  PERFORMANCE_VALIDATION_REPORT.md
docs/specs/: open_questions.md  open_questions_answer.md  prd_vnext.md
engine/: Cargo.toml
engine/src/: arena.rs  event.rs  input.rs  lib.rs  performance.rs  render.rs  tty.rs
engine/tests/: fuzz_input.rs  memory_validation.rs  performance_validation.rs  tui_layout_test.rs
examples/: demo.rs
persistence/: Cargo.toml
persistence/src/: config.rs  lib.rs  profile.rs  storage.rs
platform/: Cargo.toml
platform/src/: detection.rs  input.rs  lib.rs  performance.rs  terminal.rs
scripts/: benchmark_latency.sh  benchmark_startup.sh  check_performance_regression.py  compare_performance.sh  generate_changelog.sh  prepare_npm.sh  prepare_release.sh  publish_crates.sh  run_performance_benchmarks.sh  security_pipeline.sh  security_scan.sh  validate_architecture.sh  validate_cicd_setup.sh  validate_local.sh
security_reports/: SECURITY_AUDIT_REPORT.md  SECURITY_VALIDATION_SUMMARY.md
src/: ci_cd_performance_framework.rs
