[package]
name = "centotype-content"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Text corpus loading, caching, and dynamic generation for Centotype"

[dependencies]
centotype-core.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
unicode-segmentation.workspace = true
indexmap.workspace = true
rayon.workspace = true
once_cell.workspace = true
memmap2.workspace = true
tracing.workspace = true
# Content generation dependencies
moka = { version = "0.12", features = ["future"] }
rand = "0.8"
rand_chacha = "0.3"
unicode-normalization = "0.1"
# Async support for content loading
tokio = { workspace = true, features = ["sync"] }
# Error handling
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true