[package]
name = "centotype-persistence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Profile storage and configuration management for Centotype"

[dependencies]
centotype-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
chrono.workspace = true
tracing.workspace = true